--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,15 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+   
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 a {
   color: inherit;
   text-decoration: none;
@@ -13,6 +17,14 @@ a {
 
 * {
   box-sizing: border-box;
+  
+}
+.imgbackSignIn{
+  background-image: url('../public/assets/alexander-redl-d3bYmnZ0ank-unsplash.jpg');
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width:calc(100% /3 * 2)
 }
 
 @media (prefers-color-scheme: dark) {
