--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,11 @@ a {
   height: 100vh;
   background-size: cover;
 }
+.imgbackexer{
+  height:35vh;
+  width:100%;
+  border-radius: 20px 0 0 20px;
+}
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
