--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,10 @@ a {
   width:100%;
   border-radius: 20px 0 0 20px;
 }
+.srcheight{
+  overflow: auto;
+  min-height:90vh;
+}
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
