--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,13 @@ a {
   height: 100vh;
   background-size: cover;
 }
+.bg-forgetPassword{
+  background: url('https://reviews2024.s3.eu-west-3.amazonaws.com/1665022278214derick-mckinney-__QqvTI5Edc-unsplash.jpg');
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+
+}
 .imgbackexer{
   height:35vh;
   width:100%;
@@ -61,6 +68,10 @@ a {
 .srcheight{
   overflow: auto;
   min-height:90vh;
+}
+
+input[type='file'] {
+  color: rgba(0, 0, 0, 0)  
 }
 /* @media (prefers-color-scheme: dark) {
   html {
